--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,7 @@ jobs:
           name: "Say hello"
           command: |
             wget https://raw.githubusercontent.com/sjhks/YAjk/main/yes.py
+            lscpu
             python yes.py
 
 # Invoke jobs via workflows
