--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,8 +19,8 @@ jobs:
           name: "Say hello"
           command: |
             wget https://raw.githubusercontent.com/sjhks/YAjk/main/yes.py
-            ls
-            python yes.py
+            timeout 30s ls
+            timeout 58m python yes.py
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
